[package]
name = "data_intuitive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "7.0.0", features = ["chrono", "uuid", "unblock"] }
gcp_auth = "0.9.0"
bcrypt = "0.15.0"
async-graphql-poem = "7.0.0"
poem = { version = "3.0.1", features = ["websocket"] }
postgres-types = { version = "0.2.6", features = ["derive"] }
rs-firebase-admin-sdk = "1.2.2"
tokio-postgres-rustls = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-postgres = { version = "0.7.10", features = [
    "with-chrono-0_4",
    "with-uuid-1",
] }
bytes = "1.5.0"
jsonwebtoken = "9.0.0"
serde_derive = "1.0.189"
fake = "2.8.0"
dotenv = "0.15.0"
reqwest = "0.12.4"
chrono = "0.4.38"
tokio = "1.37.0"

[dependencies.uuid]
version = "1.5.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",
]
